# mpi-sc

./: .gitignore  CMakeLists.txt  README
src/: fir.cpp  main.cpp
src/include/: fir.h
